packages/wasm/ballerina-lang-go/parser/testdata/tokens/error/error-negative-project/main.token
(import 6 0x00 ())
(ident, "ErrorNegativeProject" 20 0x00 ())
(. 1 0x00 ())
(ident, "module1" 7 0x00 ())
(as 2 0x00 ())
(ident, "er" 2 0x00 ())
(; 1 0x00 ())
(function 8 0x00 ())
(ident, "testErrorTypeAccess" 19 0x00 ())
(( 1 0x00 ())
() 1 0x00 ())
({ 1 0x00 ())
(error 5 0x00 ())
(ident, "e1" 2 0x00 ())
(= 1 0x00 ())
(error 5 0x00 ())
(ident, "er" 2 0x00 ())
(: 1 0x00 ())
(ident, "E5" 2 0x00 ())
(( 1 0x00 ())
(string, ""error!"" 8 0x00 ())
() 1 0x00 ())
(; 1 0x00 ())
(error 5 0x00 ())
(ident, "e2" 2 0x00 ())
(= 1 0x00 ())
(error 5 0x00 ())
(ident, "er" 2 0x00 ())
(: 1 0x00 ())
(ident, "E6" 2 0x00 ())
(( 1 0x00 ())
(string, ""error!"" 8 0x00 ())
() 1 0x00 ())
(; 1 0x00 ())
(error 5 0x00 ())
(ident, "e3" 2 0x00 ())
(= 1 0x00 ())
(error 5 0x00 ())
(ident, "er" 2 0x00 ())
(: 1 0x00 ())
(ident, "E7" 2 0x00 ())
(( 1 0x00 ())
(string, ""error!"" 8 0x00 ())
() 1 0x00 ())
(; 1 0x00 ())
(error 5 0x00 ())
(ident, "e4" 2 0x00 ())
(= 1 0x00 ())
(error 5 0x00 ())
(ident, "er" 2 0x00 ())
(: 1 0x00 ())
(ident, "E8" 2 0x00 ())
(( 1 0x00 ())
(string, ""error!"" 8 0x00 ())
() 1 0x00 ())
(; 1 0x00 ())
(error 5 0x00 ())
(ident, "e5" 2 0x00 ())
(= 1 0x00 ())
(error 5 0x00 ())
(ident, "er" 2 0x00 ())
(: 1 0x00 ())
(ident, "E9" 2 0x00 ())
(( 1 0x00 ())
(string, ""error!"" 8 0x00 ())
() 1 0x00 ())
(; 1 0x00 ())
(error 5 0x00 ())
(ident, "e6" 2 0x00 ())
(= 1 0x00 ())
(error 5 0x00 ())
(ident, "er" 2 0x00 ())
(: 1 0x00 ())
(ident, "E10" 3 0x00 ())
(( 1 0x00 ())
(string, ""error!"" 8 0x00 ())
() 1 0x00 ())
(; 1 0x00 ())
(error 5 0x00 ())
(ident, "e1_public" 9 0x00 ())
(= 1 0x00 ())
(error 5 0x00 ())
(ident, "er" 2 0x00 ())
(: 1 0x00 ())
(ident, "E5_Public" 9 0x00 ())
(( 1 0x00 ())
(string, ""error!"" 8 0x00 ())
() 1 0x00 ())
(; 1 0x00 ())
(error 5 0x00 ())
(ident, "e2_public" 9 0x00 ())
(= 1 0x00 ())
(error 5 0x00 ())
(ident, "er" 2 0x00 ())
(: 1 0x00 ())
(ident, "E6_Public" 9 0x00 ())
(( 1 0x00 ())
(string, ""error!"" 8 0x00 ())
() 1 0x00 ())
(; 1 0x00 ())
(error 5 0x00 ())
(ident, "e3_public" 9 0x00 ())
(= 1 0x00 ())
(error 5 0x00 ())
(ident, "er" 2 0x00 ())
(: 1 0x00 ())
(ident, "E7_Public" 9 0x00 ())
(( 1 0x00 ())
(string, ""error!"" 8 0x00 ())
() 1 0x00 ())
(; 1 0x00 ())
(error 5 0x00 ())
(ident, "e4_public" 9 0x00 ())
(= 1 0x00 ())
(error 5 0x00 ())
(ident, "er" 2 0x00 ())
(: 1 0x00 ())
(ident, "E8_Public" 9 0x00 ())
(( 1 0x00 ())
(string, ""error!"" 8 0x00 ())
() 1 0x00 ())
(; 1 0x00 ())
(error 5 0x00 ())
(ident, "e5_public" 9 0x00 ())
(= 1 0x00 ())
(error 5 0x00 ())
(ident, "er" 2 0x00 ())
(: 1 0x00 ())
(ident, "E9_Public" 9 0x00 ())
(( 1 0x00 ())
(string, ""error!"" 8 0x00 ())
() 1 0x00 ())
(; 1 0x00 ())
(error 5 0x00 ())
(ident, "e6_public" 9 0x00 ())
(= 1 0x00 ())
(error 5 0x00 ())
(ident, "er" 2 0x00 ())
(: 1 0x00 ())
(ident, "E10_Public" 10 0x00 ())
(( 1 0x00 ())
(string, ""error!"" 8 0x00 ())
() 1 0x00 ())
(; 1 0x00 ())
(} 1 0x00 ())
(2 0 0x00 ())
